--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
 
+* {
+  box-sizing: border-box;
+}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -56,7 +60,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 50px;
+  height: 65px;
   padding-top: 15px;
   background-color: #252831;
   text-align:center;
@@ -156,8 +160,7 @@ nav h1 a {
   min-height: 380px;
   padding: 25px 30px 25px 30px;
   text-align: left;
-  width: 270px;
-
+  width: 330px;
   display: inline-block;
 }
 #restaurants-list .restaurant-img {
@@ -194,3 +197,144 @@ nav h1 a {
   text-transform: uppercase;
 }
 
+/* ====================== Restaurant Details ====================== */
+.inside header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+.inside #map-container {
+  background: blue none repeat scroll 0 0;
+  height: 87%;
+  position: fixed;
+  right: 0;
+  top: 80px;
+  width: 50%;
+}
+.inside #map {
+  background-color: #ccc;
+  height: 100%;
+  width: 100%;
+}
+.inside #footer {
+  bottom: 0;
+  position: absolute;
+  width: 50%;
+}
+#restaurant-name {
+  color: #f18200;
+  font-family: Arial,sans-serif;
+  font-size: 20pt;
+  font-weight: 200;
+  letter-spacing: 0;
+  margin: 15px 0 30px;
+  text-transform: uppercase;
+  line-height: 1.1;
+}
+#restaurant-img {
+	width: 100%;
+  border-top-right-radius: 50px;
+}
+#restaurant-address {
+  font-size: 12pt;
+  margin: 10px 0px;
+}
+#restaurant-cuisine {
+  background-color: #333;
+  color: #ddd;
+  font-size: 12pt;
+  font-weight: 300;
+  letter-spacing: 10px;
+  margin: 0 0 20px;
+  padding: 5px 0;
+  text-align: center;
+  text-transform: uppercase;
+	width: 100%;
+}
+#restaurant-container, #reviews-container {
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff;
+  padding: 140px 40px 30px;
+  width: 50%;
+}
+#reviews-container {
+  padding: 30px 40px 80px;
+}
+#reviews-container h2 {
+  color: #f58500;
+  font-size: 24pt;
+  font-weight: 300;
+  letter-spacing: -1px;
+  padding-bottom: 1pt;
+}
+#reviews-list {
+  margin: 0;
+  padding: 0;
+}
+#reviews-list li {
+  background-color: #fff;
+  box-shadow: 0 0px 9px rgba(0, 0, 0, 0.20);
+  display: block;
+  list-style-type: none;
+  margin: 0 0 30px;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  width: 100%;
+  border-top-right-radius: 50px;
+}
+#reviews-list li p {
+  margin: 0 0 10px;
+  padding: 20px;
+  font-size: 16px;
+  text-align: justify;
+}
+
+#reviews-list li p:first-child {
+  background-color: #333;
+  color: white;
+  width: 45%;
+  float: left;
+}
+
+#reviews-list li p:nth-child(2) {
+  background-color: #333;
+  color: white;
+  width: 55%;
+  float: right;
+  color: darkgrey;
+}
+
+#reviews-list li p:nth-child(3){
+background-color: orange;
+border-radius: 7px;
+padding: 10px;
+width: 110px;
+margin:  0 20px;
+display: inline-block;
+color: white;
+font-weight: bold;
+text-transform: uppercase;
+}
+
+#restaurant-hours {
+  width: 100%;
+}
+
+#restaurant-hours td {
+  color: #666;
+  background-color: white;
+  padding: 15px;
+  border-radius: 7px;
+
+}
+
+.inside nav {
+  height: 65px;
+}
+
+.inside {
+  display: flex;
+  flex-wrap: wrap;
+}
