--- a/css/responsive-infos.css
+++ b/css/responsive-infos.css
@@ -1,29 +1,23 @@
-
 @media screen and (max-width: 800px) {
-.inside #map-container {
-    height: 100vh;
-    position: inherit;
-    width: 100%;
+    .inside #map-container {
+        height: 100vh;
+        position: inherit;
+        width: 100%;
+    }
+    .inside {
+        width: 100%;
+    }
+    #breadcrumb {
+        width: 100%;
+    }
+    #restaurant-container,
+    #reviews-container {
+        padding: 30px 40px 80px;
+        width: 100%;
+    }
+    .inside #footer {
+        width: 100%;
+    }
 }
 
-.inside{
-    width: 100%;
-}
-
-#breadcrumb {
-    width: 100%;
-}
-
-#restaurant-container, #reviews-container{
-    padding: 30px 40px 80px;
-    width: 100%;
-}
-
-.inside #footer {
-    width: 100%;
-}
-}
-
-
-@media screen and (min-width: 80px) {
-}
+@media screen and (min-width: 80px) {}
