--- a/css/styles.css
+++ b/css/styles.css
@@ -1,80 +1,115 @@
 @charset "utf-8";
+
 /* CSS Document */
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-	line-height: 1.5;
+body,
+td,
+th,
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10pt;
+    color: #333;
+    line-height: 1.5;
 }
 
 body {
-	background-color: #fdfdfd;
-	margin: 0;
-	position:relative;
+    background-color: #fdfdfd;
+    margin: 0;
+    position: relative;
 }
 
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
+ul,
+li {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10pt;
+    color: #333;
 }
+
 a {
-	color: orange;
-	text-decoration: none;
+    color: orange;
+    text-decoration: none;
 }
-a:hover, a:focus {
-	color: #3397db;
-	text-decoration: none;
+
+a:hover,
+a:focus {
+    color: #3397db;
+    text-decoration: none;
 }
-a img{
-	border: none 0px #fff;
+
+a img {
+    border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0 0 20px;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
+
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 #maincontent {
-  background-color: #f3f3f3;
-  min-height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
+    background-color: #f3f3f3;
+    min-height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
+
 #footer {
-  background-color: #444;
-  color: #aaa;
-  font-size: 8pt;
-  letter-spacing: 1px;
-  padding: 25px;
-  text-align: center;
-  text-transform: uppercase;
+    background-color: #444;
+    color: #aaa;
+    font-size: 8pt;
+    letter-spacing: 1px;
+    padding: 25px;
+    text-align: center;
+    text-transform: uppercase;
 }
+
+
 /* ====================== Navigation ====================== */
+
 nav {
-  width: 100%;
-  height: 65px;
-  padding-top: 15px;
-  background-color: #252831;
-  text-align:center;
+    width: 100%;
+    height: 65px;
+    padding-top: 15px;
+    background-color: #252831;
+    text-align: center;
 }
+
 nav h1 {
-  margin: auto;
+    margin: auto;
 }
+
 nav h1 a {
-  color: #fff;
-  font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 10px;
-  text-transform: uppercase;
+    color: #fff;
+    font-size: 14pt;
+    font-weight: 200;
+    letter-spacing: 10px;
+    text-transform: uppercase;
 }
+
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
@@ -84,257 +119,295 @@ nav h1 a {
     width: 50%;
 }
 
+
 /* Display list items side by side */
+
 #breadcrumb li {
     display: inline;
 }
 
+
 /* Add a slash symbol (/) before/behind each list item */
+
 #breadcrumb li+li:before {
     padding: 8px;
     color: black;
     content: "/\00a0";
 }
 
+
 /* Add a color to all links inside the list */
+
 #breadcrumb li a {
     color: #0275d8;
     text-decoration: none;
 }
 
+
 /* Add a color on mouse-over */
+
 #breadcrumb li a:hover {
     color: #01447e;
     text-decoration: underline;
 }
+
+
 /* ====================== Map ====================== */
+
 #map {
-  height: 400px;
-  width: 100%;
-  background-color: #ccc;
+    height: 400px;
+    width: 100%;
+    background-color: #ccc;
 }
+
+
 /* ====================== Restaurant Filtering ====================== */
+
 .filter-options {
-  width: 100%;
-  height: 55px;
-  background-color: #3397DB;
-  align-items: center;
+    width: 100%;
+    height: 55px;
+    background-color: #3397DB;
+    align-items: center;
 }
+
 .filter-options h2 {
-  color: white;
-  font-size: 1rem;
-  font-weight: normal;
-  line-height: 1;
-  margin: 0 20px;
-  padding-top: 20px;
-  float: left;
+    color: white;
+    font-size: 1rem;
+    font-weight: normal;
+    line-height: 1;
+    margin: 0 20px;
+    padding-top: 20px;
+    float: left;
 }
+
 .filter-options select {
-  background-color: white;
-  border: 1px solid #fff;
-  font-family: Arial,sans-serif;
-  font-size: 11pt;
-  height: 35px;
-  letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+    background-color: white;
+    border: 1px solid #fff;
+    font-family: Arial, sans-serif;
+    font-size: 11pt;
+    height: 35px;
+    letter-spacing: 0;
+    margin: 10px;
+    padding: 0 10px;
+    width: 200px;
 }
+
 
 /* ====================== Restaurant Listing ====================== */
+
 #restaurants-list {
-  background-color: #f3f3f3;
-  list-style: outside none none;
-  margin: 0;
-  text-align: center;
-  flex-wrap: wrap;
-  padding: 30px 0 50px 0;
-  margin: 0;
-}
-#restaurants-list li {
-  box-shadow: 0 0px 9px rgba(0, 0, 0, 0.20);
-  border-radius: 6px;
-  background-color: #fff;
-  font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 25px 30px 25px 30px;
-  text-align: left;
-  width: 330px;
-  display: inline-block;
-}
-#restaurants-list .restaurant-img {
-  background-color: #ccc;
-  display: block;
-  margin: 0;
-  max-width: 100%;
-  min-width: 100%;
-}
-#restaurants-list li h1 {
-  color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  line-height: 1.3;
-  margin: 20px 0 10px;
-  text-transform: uppercase;
-}
-#restaurants-list p {
-  margin: 0;
-  font-size: 11pt;
-}
-#restaurants-list li a {
-  background-color: orange;
-  border-radius: 2px;
-  color: #fff;
-  display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
+    background-color: #f3f3f3;
+    list-style: outside none none;
+    margin: 0;
+    text-align: center;
+    flex-wrap: wrap;
+    padding: 30px 0 50px 0;
+    margin: 0;
 }
 
+#restaurants-list li {
+    box-shadow: 0 0px 9px rgba(0, 0, 0, 0.20);
+    border-radius: 6px;
+    background-color: #fff;
+    font-family: Arial, sans-serif;
+    margin: 15px;
+    min-height: 380px;
+    padding: 25px 30px 25px 30px;
+    text-align: left;
+    width: 330px;
+    display: inline-block;
+}
+
+#restaurants-list .restaurant-img {
+    background-color: #ccc;
+    display: block;
+    margin: 0;
+    max-width: 100%;
+    min-width: 100%;
+}
+
+#restaurants-list li h1 {
+    color: #f18200;
+    font-family: Arial, sans-serif;
+    font-size: 14pt;
+    font-weight: 200;
+    letter-spacing: 0;
+    line-height: 1.3;
+    margin: 20px 0 10px;
+    text-transform: uppercase;
+}
+
+#restaurants-list p {
+    margin: 0;
+    font-size: 11pt;
+}
+
+#restaurants-list li a {
+    background-color: orange;
+    border-radius: 2px;
+    color: #fff;
+    display: inline-block;
+    font-size: 10pt;
+    margin: 15px 0 0;
+    padding: 8px 30px 10px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+
 /* ====================== Restaurant Details ====================== */
+
 .inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
+
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+    background: blue none repeat scroll 0 0;
+    height: 87%;
+    position: fixed;
+    right: 0;
+    top: 80px;
+    width: 50%;
 }
+
 .inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
+    background-color: #ccc;
+    height: 100%;
+    width: 100%;
 }
+
 .inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
+    bottom: 0;
+    position: absolute;
+    width: 50%;
 }
+
 #restaurant-name {
-  color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 20pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  margin: 15px 0 30px;
-  text-transform: uppercase;
-  line-height: 1.1;
+    color: #f18200;
+    font-family: Arial, sans-serif;
+    font-size: 20pt;
+    font-weight: 200;
+    letter-spacing: 0;
+    margin: 15px 0 30px;
+    text-transform: uppercase;
+    line-height: 1.1;
 }
+
 #restaurant-img {
-	width: 100%;
-  border-top-right-radius: 50px;
+    width: 100%;
+    border-top-right-radius: 50px;
 }
+
 #restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
+    font-size: 12pt;
+    margin: 10px 0px;
 }
+
 #restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
-  font-size: 12pt;
-  font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
-  padding: 5px 0;
-  text-align: center;
-  text-transform: uppercase;
-	width: 100%;
+    background-color: #333;
+    color: #ddd;
+    font-size: 12pt;
+    font-weight: 300;
+    letter-spacing: 10px;
+    margin: 0 0 20px;
+    padding: 5px 0;
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
 }
-#restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
-}
+
+#restaurant-container,
 #reviews-container {
-  padding: 30px 40px 80px;
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #fff;
+    padding: 140px 40px 30px;
+    width: 50%;
 }
+
+#reviews-container {
+    padding: 30px 40px 80px;
+}
+
 #reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+    color: #f58500;
+    font-size: 24pt;
+    font-weight: 300;
+    letter-spacing: -1px;
+    padding-bottom: 1pt;
 }
+
 #reviews-list {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
+
 #reviews-list li {
-  background-color: #fff;
-  box-shadow: 0 0px 9px rgba(0, 0, 0, 0.20);
-  display: block;
-  list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  padding: 0;
-  position: relative;
-  width: 100%;
-  border-top-right-radius: 50px;
+    background-color: #fff;
+    box-shadow: 0 0px 9px rgba(0, 0, 0, 0.20);
+    display: block;
+    list-style-type: none;
+    margin: 0 0 30px;
+    overflow: hidden;
+    padding: 0;
+    position: relative;
+    width: 100%;
+    border-top-right-radius: 50px;
 }
+
 #reviews-list li p {
-  margin: 0 0 10px;
-  padding: 20px;
-  font-size: 16px;
-  text-align: justify;
+    margin: 0 0 10px;
+    padding: 20px;
+    font-size: 16px;
+    text-align: justify;
 }
 
 #reviews-list li p:first-child {
-  background-color: #333;
-  color: white;
-  width: 45%;
-  float: left;
+    background-color: #333;
+    color: white;
+    width: 45%;
+    float: left;
 }
 
 #reviews-list li p:nth-child(2) {
-  background-color: #333;
-  color: white;
-  width: 55%;
-  float: right;
-  color: darkgrey;
+    background-color: #333;
+    color: white;
+    width: 55%;
+    float: right;
+    color: darkgrey;
 }
 
-#reviews-list li p:nth-child(3){
-background-color: orange;
-border-radius: 7px;
-padding: 10px;
-width: 110px;
-margin:  0 20px;
-display: inline-block;
-color: white;
-font-weight: bold;
-text-transform: uppercase;
+#reviews-list li p:nth-child(3) {
+    background-color: orange;
+    border-radius: 7px;
+    padding: 10px;
+    width: 110px;
+    margin: 0 20px;
+    display: inline-block;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 #restaurant-hours {
-  width: 100%;
+    width: 100%;
 }
 
 #restaurant-hours td {
-  color: #666;
-  background-color: white;
-  padding: 15px;
-  border-radius: 7px;
-
+    color: #666;
+    background-color: white;
+    padding: 15px;
+    border-radius: 7px;
 }
 
 .inside nav {
-  height: 65px;
+    height: 65px;
 }
 
 .inside {
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
